--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: calc(100vh - 79px);
   margin-top: 79px;
-  background: url('../img/banner2.jpg') no-repeat center/cover;
+  background: url('../img/banner.jpg') no-repeat center/cover;
   object-fit: cover;
 }
 .banner-title {
