--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,7 +4,7 @@ html {
 .menu {
   display: flex;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   justify-content: space-between;
   position: fixed;
   z-index: 1;
@@ -19,9 +19,11 @@ html {
   color: #020202;
   padding: 1rem 0;
 }
+.menu-logo::before {
+  content: '👩‍🍳';
+}
 .menu-logo span {
   color: #117711;
-  position: relative;
 }
 .menu-list {
   display: flex;
@@ -35,13 +37,11 @@ html {
   text-decoration: none;
   cursor: pointer;
   color: #808080;
-  font-size: 1.25rem;
-}
-.menu-link.active {
-  color: #000;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 .menu-link:hover {
+  color: #000;
   text-decoration: underline;
 }
 
