--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -12,10 +12,11 @@
   position: absolute;
   top: 30%;
   font: 400 5rem 'Pacifico', cursive;
-  color: #FBFBFB;
+  color: #DFDFDF;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.85);
   text-align: center;
   width: 100%;
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 1000px) {
